[tool.poetry]
name = "rogue-net"
version = "0.1.7"
description = "Ragged batch transformer implementation that is compatible with entity-gym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
ragged-buffer = "^0.4.3"
entity-gym = "^0.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
